--- a/GGDB/app/src/main/res/values/strings.xml
+++ b/GGDB/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">GGDB</string>
-
+    <string name="userProfileButtonString">User Profile</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
 </resources>
