--- a/GGDB/app/src/main/res/values/strings.xml
+++ b/GGDB/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="title_activity_news">NewsActivity</string>
 </resources>
