--- a/GGDB/app/src/main/res/values/strings.xml
+++ b/GGDB/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_user_profile">UserProfileActivity</string>
     <string name="title_activity_news">NewsActivity</string>
     <string name="title_activity_game_profile">GameProfile</string>
+    <string name="title_activity_search">SearchActivity</string>
 </resources>
